--- a/index.html
+++ b/index.html
@@ -156,16 +156,16 @@
           exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
         </p>
         <h3 class="w3-padding-16">My Skills</h3>
-        <p class="w3-wide">Photography</p>
+        <p class="w3-wide">Fullstack Developer</p>
         <div class="w3-light-grey">
           <div
             class="w3-container w3-center w3-padding-small w3-dark-grey"
-            style="width: 95%"
+            style="width: 90%"
           >
-            95%
+            90%
           </div>
         </div>
-        <p class="w3-wide">Web Design</p>
+        <p class="w3-wide">Mortgage Loan Officer</p>
         <div class="w3-light-grey">
           <div
             class="w3-container w3-center w3-padding-small w3-dark-grey"
@@ -174,13 +174,13 @@
             85%
           </div>
         </div>
-        <p class="w3-wide">Photoshop</p>
+        <p class="w3-wide">Minimalism</p>
         <div class="w3-light-grey">
           <div
             class="w3-container w3-center w3-padding-small w3-dark-grey"
-            style="width: 80%"
+            style="width: 99%"
           >
-            80%
+            99%
           </div>
         </div>
         <br />
