--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
-      background-image: url("/w3images/profile_girl.jpg");
+      background-image: url("profile-pic.jpeg");
       min-height: 100%;
     }
   </style>
@@ -174,7 +174,7 @@
             85%
           </div>
         </div>
-        <p class="w3-wide">Minimalism</p>
+        <p class="w3-wide">Minimalist</p>
         <div class="w3-light-grey">
           <div
             class="w3-container w3-center w3-padding-small w3-dark-grey"
