--- a/index.html
+++ b/index.html
@@ -110,9 +110,13 @@
           width="1000"
           height="1333"
         />
-        <button class="w3-button w3-light-grey w3-padding-large w3-margin-top">
-          <i class="fa fa-download"></i> Download Resume
-        </button>
+        <a href="Fiona-Zheng-SWE-Resume.pdf" download>
+          <button
+            class="w3-button w3-light-grey w3-padding-large w3-margin-top"
+          >
+            <i class="fa fa-download"></i> Download Resume
+          </button>
+        </a>
       </header>
 
       <!-- Portfolio Section -->
@@ -160,18 +164,18 @@
         <div class="w3-light-grey">
           <div
             class="w3-container w3-center w3-padding-small w3-dark-grey"
-            style="width: 90%"
+            style="width: 80%"
           >
-            90%
+            80%
           </div>
         </div>
         <p class="w3-wide">Mortgage Loan Officer</p>
         <div class="w3-light-grey">
           <div
             class="w3-container w3-center w3-padding-small w3-dark-grey"
-            style="width: 85%"
+            style="width: 90%"
           >
-            85%
+            90%
           </div>
         </div>
         <p class="w3-wide">Minimalist</p>
@@ -203,11 +207,11 @@
             Meetings
           </div>
         </div>
-
-        <button class="w3-button w3-light-grey w3-padding-large w3-section">
-          <i class="fa fa-download"></i> Download Resume
-        </button>
-
+        <a href="Fiona-Zheng-SWE-Resume.pdf" download>
+          <button class="w3-button w3-light-grey w3-padding-large w3-section">
+            <i class="fa fa-download"></i> Download Resume
+          </button>
+        </a>
         <!-- Testimonials -->
         <h3 class="w3-padding-24">My Reputation</h3>
         <img
