--- a/index.html
+++ b/index.html
@@ -393,12 +393,21 @@
         class="w3-container w3-padding-64 w3-light-grey w3-center w3-opacity w3-xlarge"
         style="margin: -24px"
       >
-        <i class="fa fa-facebook-official w3-hover-opacity"></i>
-        <i class="fa fa-instagram w3-hover-opacity"></i>
-        <i class="fa fa-snapchat w3-hover-opacity"></i>
-        <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-        <i class="fa fa-twitter w3-hover-opacity"></i>
-        <i class="fa fa-linkedin w3-hover-opacity"></i>
+        <a href="https://github.com/fionazh3ng" target="_blank">
+          <i class="fa fa-github w3-hover-opacity"></i
+        ></a>
+        <a href="http://instagram.com/fionazh3ng" target="_blank">
+          <i class="fa fa-instagram w3-hover-opacity"></i
+        ></a>
+        <a
+          href="https://www.youtube.com/channel/UCwChOvAJ8VrjZ6JNJWaBKdQ"
+          target="_blank"
+        >
+          <i class="fa fa-youtube w3-hover-opacity"></i
+        ></a>
+        <a href="https://linkedin.com/in/fionazh3ng" target="_blank">
+          <i class="fa fa-linkedin w3-hover-opacity"></i>
+        </a>
         <p class="w3-medium">
           Powered by
           <a
