--- a/index.html
+++ b/index.html
@@ -148,16 +148,14 @@
         <h2>About</h2>
         <hr class="w3-opacity" />
         <p>
-          Some text about me. Some text about me. I am lorem ipsum consectetur
-          adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-          ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-          irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-          fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-          sunt in culpa qui officia deserunt mollit anim id est laborum
-          consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-          labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-          exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          • Recent software engineer with coding bootcamp certification and
+          practical programming skills. <br />• Brings a strong background in
+          the mortgage industry, with proven communication, time management, and
+          organizational abilities. <br />• Experienced in handling complex
+          processes, demonstrating a detail-oriented and client-focused
+          approach. <br />• Aims to leverage technical expertise and industry
+          skills to develop effective software solutions and contribute to
+          project success.
         </p>
         <h3 class="w3-padding-16">My Skills</h3>
         <p class="w3-wide">Fullstack Developer</p>
